--- a/SalesMvcAsp/Views/Home/About.cshtml
+++ b/SalesMvcAsp/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Software: @ViewData["Software"]</p>
+
+<address>
+    <a href="github.com/valento45">github.com/valento45</a>
+</address>
