--- a/SalesMvcAsp/Views/Home/About.cshtml
+++ b/SalesMvcAsp/Views/Home/About.cshtml
@@ -7,5 +7,5 @@
 <p>Software: @ViewData["Software"]</p>
 
 <address>
-    <a href="github.com/valento45">github.com/valento45</a>
+    <a href="https://github.com/valento45">https://github.com/valento45</a>
 </address>
